# mmc-check-password

./: .gitignore  Makefile.am  README  configure.ac  mmc-password-helper.in  mmc-password-helper.ini
